# Weather-app

./: .gitignore  CMakeLists.txt  WeatherApp.cpp  WeatherApp.sln  WeatherApp.vcxproj  WeatherApp.vcxproj.filters  default.nix  flake.nix  package.nix
.github/workflows/: bulid-ci.yml  deploy-ci.yml
deploy/: WeatherApp.desktop
qml/: main.qml
src/: main.cpp  util.cpp
